--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,6 +27,12 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
+    
+    - name: present working directoty
+      run: pwd
+    
+    - name: present working directoty
+      run: ls
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
