--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: gradle_artifacts
-        path: downloads
+        path: github-action
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
